Fix #2912 new enh. Pick Page Adjustments The top group of 69 balls should be moved down slightly, so there's some white space below the top button row. This goes under the top group of 69 balls (not below Pick 1 Poweball): "Pick more than 5 to play a combo bet and boost your odds" The light blue ball fill colour is too faint. Let's try a lighter shade of the faded red border colour as the fill colour (for both sets of balls). This will be similar to the trac P1 row colour shade. For the Powerball set the border and numbers should be the brighter red. Same fill colour as the top set of balls.

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -130,8 +130,13 @@ html, body {
 	outline: 0px solid transparent;
 }
 
+.ball.powerballs {
+   color: #fc345d;
+	border: 2px solid #fc345d;
+}
+
 .ball.selected {
-	background: #e6f6ff;
+	background: #fbdee3;
 }
 
 .ball.disabled {
@@ -153,6 +158,15 @@ html, body {
 .number-slots {
 	padding: 1px;
 	margin-left: 13px;
+}
+
+.number-slots.top-group {
+	margin-top: 20px;
+}
+
+.number-slots > p {
+	margin-top: 0;
+	padding-top: 0;
 }
 
 .panel-wrap {
@@ -190,6 +204,8 @@ html, body {
 .action.right {
     right: 2px;
     top: 7px;
+    width: 40px;
+    text-align: center;
 }
 
 .layout-row.selected-bets {
